# Go_Bot

./: .gitignore  Doxyfile  README.md  launch.bash
docs/html/: annotated.html  classes.html  classgo__motion__planner-members.html  classgo__motion__planner.html  classspawn__items__gazebo_1_1spawn__items-members.html  classspawn__items__gazebo_1_1spawn__items.html  dir_59a3414ad51ed1d97d708b74371d0011.html  dir_9c2152ede3bdaac4cb00ff08d1c9cd0d.html  dir_d3a9625b33098597fabe85cba9728150.html  files.html  functions.html  functions_func.html  go__motion__planner_8hpp.html  go__motion__planner_8hpp__dep__incl.map  go__motion__planner_8hpp__dep__incl.md5  go__motion__planner_8hpp__incl.map  go__motion__planner_8hpp__incl.md5  go__motion__planner_8hpp_source.html  graph_legend.html  index.html  md_README.html  menudata.js  namespaces.html  namespacespawn__items__gazebo.html  pages.html  pick__and__place_8cpp.html  pick__and__place_8cpp__incl.map  pick__and__place_8cpp__incl.md5
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classgo__motion__planner.tex  classspawn__items__gazebo_1_1spawn__items.tex  dir_59a3414ad51ed1d97d708b74371d0011.tex  dir_9c2152ede3bdaac4cb00ff08d1c9cd0d.tex  dir_d3a9625b33098597fabe85cba9728150.tex  files.tex  go__motion__planner_8hpp.tex  go__motion__planner_8hpp__dep__incl.md5  go__motion__planner_8hpp__incl.md5  md_README.tex  namespaces.tex  namespacespawn__items__gazebo.tex  pick__and__place_8cpp.tex  pick__and__place_8cpp__incl.md5  refman.tex
go_bot_server/: CMakeLists.txt  package.xml
go_bot_server/launch/: record_robot.launch
go_bot_server/src/client/: go.css  go.html  go_bot.css  go_bot.js  index.html  main.js
go_bot_server/src/server/: main.py
go_bot_server/srv/: move.srv
go_browser/: CMakeLists.txt  package.xml
go_browser/launch/: launch.launch
go_browser/msg/: error.msg  gamestate.msg
go_browser/src/: go_browser.html  visualize_robot.py
go_browser/src/go_bot/: package-lock.json  package.json
go_browser/src/go_bot/src/: App.css  App.js  Game.js  board_row.js  drawer.js
go_browser/srv/: move.srv
go_core/: CMakeLists.txt  package.xml
go_engine/: CMakeLists.txt  package.xml
go_engine/src/: play_game.py
go_engine/src/deep_learning_go/: agent.py  deep_q_agent.py  encoder.py  game_state.py  go_board.py  go_string.py  go_types.py  move.py  online_agent.py  random_agent.py  replayBuffer.py  zobrist_hash.py
go_engine/test/: test.py
go_motion_planning/: CMakeLists.txt  package.xml
go_motion_planning/config/: go_bot.world  setup.yaml
go_motion_planning/launch/: launch.launch
go_motion_planning/models/go_board/: go_board.sdf  model.config
go_motion_planning/models/go_board/meshes/: go_board.dae
go_motion_planning/models/go_piece/: model.config  model.sdf
go_motion_planning/models/go_piece_black/: model.config  model.sdf
go_motion_planning/models/go_piece_white/: model.config  model.sdf
go_motion_planning/src/: .go_motion_planner.hpp.swp  demo_pick_and_place.py  go_motion_planner.hpp  manipulate_gazebo.py  pick_and_place.cpp  spawn_items_gazebo.py
go_motion_planning/srv/: pickup_piece.srv  pickup_set_of_pieces.srv  pickup_unused_piece.srv  spawn_piece.srv
go_motion_planning/test/: test_go_motion_planning.cpp  test_go_motion_planning.launch
go_reactor/: CMakeLists.txt  package.xml
