<?xml version="1.0"?>
<package format="2">
  <name>go_reactor</name>
  <version>1.0.0</version>
  <description>Moves ReactorX arm to play go</description>

  <maintainer email="peterjochem2020@u.northwestern.edu">Peter Jochem</maintainer>
  <license>MIT</license>
  <url type="Portfolio Post">https://peterjochem.github.io/Portfolio</url> 
  <author email="peterjochem2020@u.northwestern.edu">Peter Jochem</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
